--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,34 @@
 <h1>Books </h1>
+
+<table class="table table-sm">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Título</th>
+      <th scope="col">Autor</th>
+      <th scope="col">Estado</th>
+      <th colpan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+  <%= @books.each do |book| %>
+      <th><%= book.id  %></th>
+      <td><%= book.title  %></td>
+      <td><%= book.author  %></td>
+      <td><%= book.status  %></td> 
+      <%= link_to 'Detalle' %>
+    </tr>
+  </tbody>
+</table>
+
+
+
+<%= link_to 'Crear nuevo libro', books_new_path %>
+
+
+
+
+
+
+
+
