--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,21 +7,29 @@
       <th scope="col">Título</th>
       <th scope="col">Autor</th>
       <th scope="col">Estado</th>
-      <th colpan="3"></th>
+      <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
   <%= @books.each do |book| %>
+    </tr>
       <th><%= book.id  %></th>
       <td><%= book.title  %></td>
       <td><%= book.author  %></td>
-      <td><%= book.status  %></td> 
-      <%= link_to 'Detalle' %>
+      <td><%= book.status  %></td>
+      <td class= "text-center">
+        <%= link_to 'Detalle', book_path(book.id) %>
+      </td>
+      <td class= "text-center">
+        <%= link_to 'Editar', books_edit_path(book.id) %>
+      </td>
+      <td class= "text-center">
+        <%= link_to 'Destroy', '#', class: 'text-danger' %>
+      </td>  
     </tr>
+    <% end %>
   </tbody>
 </table>
-
-
 
 <%= link_to 'Crear nuevo libro', books_new_path %>
 
