--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,22 +1,4 @@
-<h1>new </h1>
+<h1> Nuevo Libro </h1>
 
-<%= form_for(model: @book) do |form| %>
+<%= render 'form', book: @book %>
 
-<div class="form-group form-checck"> 
-    <%= form.text_field :title, class: 'form-check-label' %>
-     <%= form.label_field :title, class: 'form-control' %>
-</div>
-
-<div class="form-group form-checck" > 
-    <%= form.text_field :Autor, class: 'form-check-label'  %>
-     <%= form.label_field :author, class: 'form-control' %>
-</div>
-
-<div class="form-group form-checck"> 
-    <%= form.text_field :Estatus, class: 'form-check-label'  %>
-     <%= form.select :status, @statuses, {}, class: 'form-control'  %>
-</div>
-
-<%= form.submit %>
-
-<%= end %>
